--- a/views/error.jade
+++ b/views/error.jade
@@ -5,5 +5,7 @@ block style
 
 block content
   h1.error= message
-    span.error-status  (#{error.status})
-  pre #{error.stack}
+    if error.status
+      span.status-code Error Code: #{error.status}
+  if error.stack
+    pre #{error.stack}
