--- a/public/css/sass/error.scss
+++ b/public/css/sass/error.scss
@@ -11,7 +11,7 @@ body {
 .error {
 	margin: 40px 20px 20px 20px;
 	padding: 20px;
-	border: 1px solid #f27e61;
+	border: 1px solid #F2616D;
     position: relative;
     font-weight: normal;
     min-height: 100px;
