most views (html + css) added, closes #13, closes #17, closes #19, closes #21, #11

--- a/public/css/sass/error.scss
+++ b/public/css/sass/error.scss
@@ -1,5 +1,5 @@
 @import '../../lib/enketo-core/src/sass/core/fonts';
-@import 'components/fonts';
+@import 'component/fonts';
 @import '../../lib/enketo-core/src/sass/core/variables';
 @import '../../lib/enketo-core/src/sass/core/mixins';
 @import '../../lib/enketo-core/src/sass/formhub/mixins';
