--- a/views/surveys/webform.jade
+++ b/views/surveys/webform.jade
@@ -1,7 +1,20 @@
 extends ../layout
 
-block content
-  h1 #{title}
+block style
+  link(rel='stylesheet', href='/css/webform_default.css') 
 
-  .form-wrapper 
-    !{form}
+block global
+  script.
+      var settings = {};
+      settings['supportEmail'] = '#{supportEmail}';
+      settings['modernBrowsersURL'] = 'modern-browsers';
+      var modelStr = !{instance};
+    
+block content
+  .main
+    article.paper
+      include component/_form-header
+      !{form}
+      include component/_form-footer
+    
+  include component/_dialogs
