fix various css issues, closes #25, closes #40

--- a/public/css/sass/component/_bootstrap.scss
+++ b/public/css/sass/component/_bootstrap.scss
@@ -11,6 +11,7 @@
 // Core CSS
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/scaffolding";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/type";
+
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/code";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/grid";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/tables";
@@ -22,17 +23,21 @@
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/glyphicons";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/dropdowns";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/button-groups";
-@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/input-groups";
+
+//@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/input-groups";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navs";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navbar";
+
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/breadcrumbs";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/pagination";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/pager";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/labels";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/badges";
+
 ///@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/jumbotron";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/thumbnails";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/alerts";
+
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/progress-bars";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/media";
 //@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/list-group";
