--- a/public/css/sass/component/_form_formhub.scss
+++ b/public/css/sass/component/_form_formhub.scss
@@ -1,4 +1,5 @@
-@import '../../../lib/enketo-core/src/sass/core/main';
-@import '../../../lib/enketo-core/src/sass/core/responsive';
-@import 'widgets';
-@import '../../../lib/enketo-core/src/sass/formhub/theme';
+@import "../../../lib/enketo-core/src/sass/core/main";
+@import "../../../lib/enketo-core/src/sass/core/responsive";
+@import "widgets";
+@import "../../../lib/enketo-core/src/sass/core/bootstrap-slider";
+@import "../../../lib/enketo-core/src/sass/formhub/theme";
