completed router with iframe view and revised ::enketoID closes #11, added XForm view (for troubleshooting), fixed test

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,9 @@ html
 
     if livereload
       script(src="//localhost:35729/livereload.js")
-  body
+
+  - var cl = (iframe) ? 'iframe' : ''
+  body(class=cl)
     block content
 
     if tracking
