added favicons, closes #42

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,12 @@ html
   head
     title= title
 
+    link(rel="shortcut icon", sizes="256x256", href="/images/icon_256x256.png")
+    link(rel="apple-touch-icon", sizes="152x152", href="/images/icon_76x76@2x.png")
+    link(rel="apple-touch-icon", sizes="120x120", href="/images/icon_60x60@2x.png")
+    link(rel="apple-touch-icon", sizes="76x76", href="/images/icon_76x76.png")
+    link(rel="apple-touch-icon", href="/images/icon_57x57.png")
+
     block style
 
     block script
