--- a/views/surveys/component/_enketo-power.jade
+++ b/views/surveys/component/_enketo-power.jade
@@ -1,4 +1,4 @@
 .enketo-power Powered by 
   a(href="https://enketo.org", title="enketo.org website")
-    img(src="/media/logo.png", alt="enketo logo")
+    img(src="/images/logo.png", alt="Enketo logo")
 
