--- a/views/surveys/component/_form-header.jade
+++ b/views/surveys/component/_form-header.jade
@@ -3,6 +3,6 @@ header.form-header
   .form-progress
   a.branding(href="#")
     .logo-wrapper
-      img(src="/media/logo.png", alt="logo")
+      img(src="/images/logo.png", alt="logo")
   button.print(onclick="return false;")
   span.form-language-selector.hide: span Choose Language
