upgraded enketo-core with even fancier geo widgets and worked around css issue #45

--- a/public/css/sass/component/_bootstrap.scss
+++ b/public/css/sass/component/_bootstrap.scss
@@ -23,8 +23,7 @@
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/glyphicons";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/dropdowns";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/button-groups";
-
-//@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/input-groups";
+@import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/input-groups";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navs";
 @import "../../../lib/enketo-core/lib/bootstrap-sass/bootstrap/navbar";
 
