upgraded enketo-core with new universal file-input widget and wired this up on the client, closes https://github.com/kobotoolbox/enketo-express/issues/9

--- a/public/css/sass/component/_widgets.scss
+++ b/public/css/sass/component/_widgets.scss
@@ -11,7 +11,7 @@
 @import "../../../lib/enketo-core/src/widget/date/datepicker-extended.scss";
 @import "../../../lib/enketo-core/src/widget/datetime/datetimepicker-extended.scss";
 @import "../../../lib/enketo-core/src/widget/mediagrid/mediagridpicker.scss";
-
-//@import "../../../lib/enketo-core/src/widget/file-offline/offline-filepicker.scss";
+@import "../../../lib/enketo-core/src/widget/file/filepicker.scss";
 @import "../../../lib/enketo-core/src/widget/select-likert/likertitem.scss";
 @import "../../../lib/enketo-core/src/widget/distress/distresspicker.scss";
+@import "../../../lib/enketo-core/src/widget/trigger/trigger.scss";
