switched to asynchronous form loading, closes #48

--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -4,11 +4,11 @@ section.form-footer
     .main-controls
       a.previous-page.disabled(href="#") Back
       if type === 'preview'
-        button#validate-form.btn.btn-primary.btn-large
+        button#validate-form.btn.btn-primary.btn-large.hide
           i.glyphicon.glyphicon-ok
           |  Validate
       else
-        button#submit-form.btn.btn-primary.btn-large
+        button#submit-form.btn.btn-primary.btn-large.hide
           i.glyphicon.glyphicon-ok
           |  Submit
       a.btn.btn-primary.next-page Next
