--- a/app/views/surveys/webform.jade
+++ b/app/views/surveys/webform.jade
@@ -5,10 +5,11 @@ block style
   link(rel='stylesheet', media='print', type='text/css' href='/css/webform_print_default.css') 
 
 block script
+  - var suffix = (type && type == "edit") ? "-edit" : ""
   if environment == "production"
-    script(src="/js/webform-combined.min.js")
+    script(src="/js/webform#{suffix}-combined.min.js")
   else
-    script(data-main="/js/src/main-webform.js", src="/lib/bower-components/requirejs/require.js")
+    script(data-main="/js/src/main-webform#{suffix}.js", src="/lib/bower-components/requirejs/require.js")
 
 block global
   if returnUrl
@@ -27,7 +28,7 @@ block content
       include component/_form-header
       | !{form}
       unless form
-        progress
+        div.form__loader
       include component/_form-footer
     
   include component/_dialogs
