form header logo is now a config setting, closes https://github.com/kobotoolbox/enketo-express/issues/85

--- a/app/views/surveys/component/_form-header.jade
+++ b/app/views/surveys/component/_form-header.jade
@@ -3,6 +3,6 @@ header.form-header
   .form-progress
   a.branding(href="#")
     .logo-wrapper
-      img(src="/images/logo.png", alt="logo")
+      img(src="#{logo}", alt="logo")
   button.print(onclick="return false;").hide
   span.form-language-selector.hide: span Choose Language
