--- a/public/css/sass/component/_form_footer.scss
+++ b/public/css/sass/component/_form_footer.scss
@@ -91,6 +91,10 @@
         left: auto;
         margin: -20px 0 40px 0;
         width: 100%;
+        line-height: 25px;
+        img {
+            width: 51px;
+        }
     }
 }
 
