added meta elements

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -9,6 +9,11 @@ html
     link(rel="apple-touch-icon", sizes="76x76", href="/images/icon_76x76.png")
     link(rel="apple-touch-icon", href="/images/icon_57x57.png")
 
+    meta(charset="utf-8")
+    meta(name="author", content="Martijn van de Rijdt (Enketo LLC)")
+    meta(name="viewport",content="width=device-width, initial-scale=1.0")
+    meta(name="apple-mobile-web-app-capable", content="yes")
+
     block style
 
     block global
