added setting for URL that the form header logo links to

--- a/app/views/surveys/component/_form-header.jade
+++ b/app/views/surveys/component/_form-header.jade
@@ -1,8 +1,8 @@
 header.form-header
   .offline-enabled
   .form-progress
-  a.branding(href="#")
+  a.branding(href="#{logo.href || '#'}")
     .logo-wrapper
-      img(src="#{logo}", alt="logo")
+      img(src="#{logo.source}", alt="logo")
   button.print(onclick="return false;").hide
   span.form-language-selector.hide: span Choose Language
