--- a/app/views/styles/component/_variables.scss
+++ b/app/views/styles/component/_variables.scss
@@ -1,15 +1,16 @@
 $baseFontSize: 16px;
 $baseLineHeight: 20px;
 
-$bg: #ddd;
+$bg: #dddddd;
 $body-bg: #f0f0f0;
 $shadow: #cccccc;
+
 //$title: #CE4F07;
-$accent-color-1: #CE4F07;
-$content_border: #E7E7E7;
+$accent-color-1: #ce4f07;
+$content_border: #e7e7e7;
 
 $max-content-width: 720px;
 $main-breakpoint: $max-content-width;
 
-$images-path: '../../media/';
-$icon-font-path: '../../lib/enketo-core/lib/bootstrap-sass/fonts/';
+$images-path: "../../media/";
+$icon-font-path: "../../lib/enketo-core/lib/bootstrap-sass/fonts/";
