--- a/app/views/surveys/component/_form-header.jade
+++ b/app/views/surveys/component/_form-header.jade
@@ -4,5 +4,5 @@ header.form-header
   a.branding(href="#{logo.href || '#'}")
     .logo-wrapper
       img(src="#{logo.source}", alt="logo")
-  button.print(onclick="return false;").hide
+  button.form-header__button--print(onclick="return false;").hide
   span.form-language-selector.hide: span Choose Language
