--- a/app/views/styles/component/_variables.scss
+++ b/app/views/styles/component/_variables.scss
@@ -1,16 +1,13 @@
-$baseFontSize: 16px;
-$baseLineHeight: 20px;
-
-$bg: #dddddd;
+//$bg: #dddddd;
 $body-bg: #f0f0f0;
-$shadow: #cccccc;
 
-//$title: #CE4F07;
-$accent-color-1: #ce4f07;
-$content_border: #e7e7e7;
+//$shadow: #cccccc;//
 
-$max-content-width: 720px;
-$main-breakpoint: $max-content-width;
+// KoBo blue
+$brand-primary-color: #3e75a6;
+$repeat-bg: lighten($brand-primary-color, 50%);
 
-$images-path: "../../media/";
-$icon-font-path: "../../lib/enketo-core/lib/bootstrap-sass/fonts/";
+// ZURB Foundation library customization
+$primary-color: $brand-primary-color;
+$secondary-color: white;
+$button-border-width: 1px;
