--- a/app/views/styles/webform_formhub.scss
+++ b/app/views/styles/webform_formhub.scss
@@ -2,21 +2,33 @@
 @import "component/fonts";
 
 // variables, in the right order
-@import "../../lib/enketo-core/src/sass/core/variables";
-@import "../../lib/enketo-core/src/sass/formhub/variables";
 @import "component/variables";
+@import "../../lib/enketo-core/src/sass/formhub/variables";
+@import "../../lib/enketo-core/src/sass/core/variables";
 
 // mixins, in the right order
 @import "../../lib/enketo-core/src/sass/core/mixins";
 @import "../../lib/enketo-core/src/sass/formhub/mixins";
 @import "component/mixins";
 
-// layout
-@import "../../lib/enketo-core/src/sass/core/layout";
-@import "component/layout_webform";
+// reset
+@import "../../lib/enketo-core/src/sass/core/reset";
 
 // components
 @import "component/common";
+
+// utilities
+@import "../../lib/enketo-core/src/sass/core/utilities";
+
+// icons
+@import "component/icons";
+
+// buttons
+@import "component/buttons";
+
+// layout
+@import "../../lib/enketo-core/src/sass/core/layout";
+@import "component/layout_webform";
 
 //@import "component/side-slider";
 @import "component/form_formhub";
