--- a/app/views/surveys/component/_form-header.jade
+++ b/app/views/surveys/component/_form-header.jade
@@ -5,4 +5,4 @@ header.form-header
     .logo-wrapper
       img(src="#{logo.source}", alt="logo")
   button.form-header__button--print(onclick="return false;").hide
-  span.form-language-selector.hide: span Choose Language
+  span.form-language-selector.hide: span= t('form.chooseLanguage')
