--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,4 +1,4 @@
 extends layout
 
 block content
-  p #{title} is running! Please access Enketo forms from your #{openrosa} installation.
+  p= t("home.msg", {appTitle: title, serverName: openrosa})
