--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -2,7 +2,7 @@ section.form-footer
   .form-footer__content
     fieldset.draft.question
     .main-controls
-      a.previous-page.disabled(href="#") Back
+      a.previous-page.disabled(href="#")= t('form.pages.back')
       if type === 'preview'
         button#validate-form.btn.btn-primary.hide
           i.icon.icon-check
@@ -11,12 +11,12 @@ section.form-footer
         button#submit-form.btn.btn-primary.hide
           i.icon.icon-check
           |  Submit
-      a.btn.btn-primary.next-page Next
+      a.btn.btn-primary.next-page= t('form.pages.next')
 
     if logout
       include _logout
     include _enketo-power
 
-    a.btn.btn-default.disabled.first-page(href="#") Return to Beginning
-    a.btn.btn-default.disabled.last-page(href="#") Go to End
+    a.btn.btn-default.disabled.first-page(href="#")= t('form.pages.return')
+    a.btn.btn-default.disabled.last-page(href="#")= t('form.pages.end')
 
