fix: redirect IE9 and less to /modern-browsers, closes https://github.com/kobotoolbox/enketo-express/issues/89

--- a/app/views/surveys/webform.jade
+++ b/app/views/surveys/webform.jade
@@ -1,5 +1,8 @@
 extends ../layout
 
+block redirect
+  <!--[if lt IE 10 ]><script>window.location = '/modern-browsers';</script><![endif]-->
+
 block style
   link(rel='stylesheet', media='all', type='text/css' href='/css/theme-#{defaultTheme}.css') 
   link(rel='stylesheet', media='print', type='text/css' href='/css/theme-#{defaultTheme}.print.css') 
