--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -14,6 +14,8 @@ html(manifest=manifest)
     link(rel="apple-touch-icon", sizes="76x76", href="/images/icon_76x76.png")
     link(rel="apple-touch-icon", href="/images/icon_57x57.png")
 
+    block redirect
+
     block style
 
     block global
