--- a/app/views/surveys/component/_logout.jade
+++ b/app/views/surveys/component/_logout.jade
@@ -1,2 +1,2 @@
 .logout
-  a(href="/authenticate/logout", title="log out of all enketo forms that require authentication")= t('form.logout')
+  a(href="/logout", title="log out of all enketo forms that require authentication")= t('form.logout')
