changed: cleaning up sloppy previous commits

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -13,7 +13,7 @@ block content
         span= t("langs.es") + ', '
       else if val === "sw"
         span= t("langs.sw") + ', '
-      else if val === "nl"
-        span= t("langs.nl") + ', '
       else if val === "he" 
-        span= t("langs.he") + '.'
+        span= t("langs.he") + ', '
+      else if val === "nl"
+        span= t("langs.nl") + '. '
