--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -15,5 +15,11 @@ block content
         span= t("langs.sw") + ', '
       else if val === "he" 
         span= t("langs.he") + ', '
+      else if val === "de"
+        span= t("langs.de") + ', '
+      else if val === "hi"
+        span= t("langs.hi") + ', '
+      else if val === "el"
+        span= t("langs.el") + ', '
       else if val === "nl"
         span= t("langs.nl") + '. '
