changed: Dutch and German

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -19,7 +19,15 @@ block content
         span= t("langs.de") + ', '
       else if val === "hi"
         span= t("langs.hi") + ', '
+      else if val === "ro"
+        span= t("langs.ro") + ', '
       else if val === "el"
         span= t("langs.el") + ', '
+      else if val === "km"
+        span= t("langs.km") + ', '
+      else if val === "th"
+        span= t("langs.th") + ', '
+      else if val === "vi"
+        span= t("langs.vi") + ', '
       else if val === "nl"
         span= t("langs.nl") + '. '
