--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -30,4 +30,4 @@ block content
       else if val === "vi"
         span= t("langs.vi") + ', '
       else if val === "nl"
-        span= t("langs.nl") + '. '
+        span= t("langs.nl") + ', '
