fixed: clicks on draft records + side slider handle not registering on touchscreen, closes #196

--- a/app/views/surveys/component/_side-slider.jade
+++ b/app/views/surveys/component/_side-slider.jade
@@ -12,6 +12,6 @@ aside.record-list.side-slider
 		span.side-slider__app-version__value
 	p.side-slider__advanced.hide
 		button.side-slider__advanced__button.flush-db.btn.btn-default(type="button")= t('advanced.flushdb')
-button.side-slider__toggle.open
-button.side-slider__toggle.close
-div.side-slider-toggle.slider-overlay
+button.side-slider__toggle.open(type="button")
+button.side-slider__toggle.close(type="button")
+div.slider-overlay
