PLD: have bug report link break out of iframe

--- a/app/views/surveys/webform.jade
+++ b/app/views/surveys/webform.jade
@@ -17,7 +17,7 @@ block script
 block content
   if manifest
     .alert-box.info(style="text-align: center;") Offline-enabled forms are experimental. Use only for testing. 
-      a(href="https://github.com/kobotoolbox/enketo-express/issues") Report new bugs
+      a(href="https://github.com/kobotoolbox/enketo-express/issues" target="_top") Report new bugs
       | .
   .main
     article.paper
