--- a/app/views/styles/component/_buttons.scss
+++ b/app/views/styles/component/_buttons.scss
@@ -195,7 +195,7 @@ button::-moz-focus-inner {
 
 // special minimal icon-only buttons
 .btn-icon-only {
-    margin: 0 0 0 10px;
+    margin: 0 10px 0 10px;
     padding: 0;
     color: $text-color;
     background: none;
