added: support for appearance="compact-n", closes https://github.com/kobotoolbox/enketo-express/issues/253

--- a/app/views/surveys/component/_form-footer.jade
+++ b/app/views/surveys/component/_form-footer.jade
@@ -1,6 +1,6 @@
 section.form-footer
   .form-footer__content
-    fieldset.draft.question.hide
+    fieldset.draft.question.simple-select.hide
       .option-wrapper: label.select 
         input.ignore(type="checkbox", name="draft")
         span.option-label= t('formfooter.savedraft.label')
